Fix spacing between paragraphs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,3 +30,7 @@
   width: 100%;
   height: 100%;
 }
+
+main > * + * {
+	margin-top: 1.5em;
+}
